--- a/employeeBackground.css
+++ b/employeeBackground.css
@@ -18,6 +18,11 @@ header {
     font-weight: bold;
 }
 
+.navbar-brand img {
+    height: 50px;
+    width: 80px;
+}
+
 /*Nav Bar Styles*/
 header .nav-link {
     /*color: #1D3124;*/
